--- a/index.html
+++ b/index.html
@@ -6,18 +6,44 @@
 
 <!DOCTYPE html>
 <html lang="en-US">
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <body>
 <head>
 	<title>ESOF423 Project</title>
-	<!-- <link rel="style" href="style.css"> -->
+	<link rel="stylesheet" href="style.css">
 </head>
 
-	<h1>DIY Legal Forms</h1>
+<h1 id="title1">Do It Yourself Legal Forms</h1>
+
+<div id="titlebox">
+	<p id="titlep">
+		Why pay an attorney to enter your information into a standard legal form?  Instead, enter the information yourself and save money.  Our legal forms are created by attorneys in your state.  Just fill in the required information, pay for the form and receive your completed legal document. 
+	</p>
+	<p id="titlep"> 
+	Click on the form you need from the options below.
+	</p>
+</div>
+
 <br />
-	<p>Select the form you need and customize to fit your situation.</p>
-<br />
-	<p>List of Forms - TBD</p>
-<br />
+
+<div class="formbox">
+	<div id="gridbox">
+		<p>Will</p>
+		<embed src="https://www.formsite.com"> 
+		<!--embed url for proper form once form is completed -->
+	</div>
+	<div id="gridbox">
+		<p> Lease </p>
+		<embed src="https://www.formsite.com"> 
+		<!--embed url for proper form once form is completed -->
+	</div>
+	<div id="gridbox">
+		<p> Misc. </p>
+		<embed src="https://www.formsite.com"> 
+		<!--embed url for proper form once form is completed -->
+	</div>
+</div>
+
 	<p> Contact Information - TBD</p>
 
 </body>
