Update index.html for ZFR requirements

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,8 @@
 	</div>
 
 	<p> Contact Information - TBD</p>
+	<p> The Github page for this project, along with a basic set of documentation on installing
+		this software and a page where you can report bugs, can be found at https://github.com/ESOF423/attorney-form-builder.</p>
 
 </body>
 
