--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,8 @@
 	<p> Contact Information - TBD</p>
 	<p> The Github page for this project, along with a basic set of documentation on installing
 		this software and a page where you can report bugs, can be found at https://github.com/ESOF423/attorney-form-builder.</p>
+	
+	<a href="https://drive.google.com/file/d/1Cgw1TXjO-6lhn1U3f11QyxkDn1wJxS-4/view?usp=sharing">View our latest burndown chart (updated biweekly)</a>
 
 </body>
 
