--- a/public/login.html
+++ b/public/login.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <form id="loginForm">
-        <input type="text" placeholder="email" name="email">
-        <input type="password" placeholder="password" name="password">
+        <input type="text" placeholder="email" id="email">
+        <input type="password" placeholder="password" id="password">
         <input type="submit" value="Submit">
         <div id="errorText"></div>
     </form>
@@ -19,11 +19,17 @@
     <script>
         $("#loginForm").submit(function(e) {
             e.preventDefault()
-            var er = $("#loginForm").serialize()
+            
+            var data =  {
+                email: $("#email").val(),
+                password: $("#password").val()
+            }
+
             $.ajax({
+                method: 'POST',
                 url: '/authenticate',
-                method: 'post',
-                data: $("#loginForm").serialize(),
+                data: JSON.stringify(data),
+                contentType: 'application/json',
                 success: function(resp){
                     if (resp.isAuthenticated){
                         // redirect to user page
