--- a/public/register.html
+++ b/public/register.html
@@ -29,7 +29,7 @@
 
             $.ajax({
                 method: 'POST',
-                url: '/register',
+                url: '/createUser',
                 data: JSON.stringify(data),
                 contentType: 'application/json',
                 success: function(resp){
